syntax = "proto3";
package kratos.api;

option go_package = "resource/internal/conf;conf";

import "google/protobuf/duration.proto";

message Bootstrap {
  Server server = 1;
  Data data = 2;
}

message Server {
  message HTTP {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  message GRPC {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  HTTP http = 1;
  GRPC grpc = 2;
}

message Data {
  message Database {
    string driver = 1;
    string source = 2;
  }
  message Redis {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration read_timeout = 3;
    google.protobuf.Duration write_timeout = 4;
  }
  message RabbitMQ {
    string url = 1;
    string queue = 2;
    string exchange = 3;
    string routing_key = 4;
  }
  message Kubernetes {
    string kubeconfig = 1;
  }
  Database database = 1;
  Redis redis = 2;
  RabbitMQ rabbitmq = 3;
  Kubernetes kubernetes = 4;
}
